.kubernetes/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-on-k3s
  namespace: hello-node-on-k3s

spec:
  ports:
    - name: http
      port: 80
      targetport: 3000
  selector:
    app: traefiklabs
    task: hello-node-on-k3s
