.kubernetes/04-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node-on-k3s-tls
  namespace: hello-node-on-k3s
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: self-signed-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - hello-node-on-k3s
    secretName: hello-node-on-k3s-tls
  rules:
    - host: hello-node-on-k3s
      http:
        paths:
          - path: /hello-node
            pathType: Prefix
            backend:
              service:
                name: hello-node-on-k3s
                port:
                  number: 80
